fix: splide images overlapping issue

--- a/client/src/components/HomePage/index.css
+++ b/client/src/components/HomePage/index.css
@@ -75,6 +75,7 @@
     display: flex !important;
     width: 280px;
     height: 280px;
+    box-shadow: none !important;
 }
 
 .splide__list {
@@ -192,8 +193,8 @@
     }
 
     .partner-splide-card {
-        width: 130px;
-        height: 130px;
+        width: 120px;
+        height: 120px;
     }
 
     /* Splide arrow buttons */
